fixed image distortion on mobile...hopefully

--- a/css/pstyles.css
+++ b/css/pstyles.css
@@ -183,7 +183,6 @@ h1:hover {
 .text2 img {
 	border: none;
 	border-radius: 50%;
-	height: 90%;
 	width: 90%;
 }
 
