--- a/css/soccstyles.css
+++ b/css/soccstyles.css
@@ -68,7 +68,6 @@ h1 {
 #Juke img {
 	border: none;
 	border-radius: 100%;
-	height: 50%;
 	width: 50%;
 }
 
